--- a/output.css
+++ b/output.css
@@ -541,6 +541,12 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
+  .col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+  .row-span-2 {
+    grid-row: span 2 / span 2;
+  }
   .container {
     width: 100%;
     @media (width >= 40rem) {
@@ -574,6 +580,9 @@
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
   }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
+  }
   .mb-20 {
     margin-bottom: calc(var(--spacing) * 20);
   }
@@ -601,8 +610,14 @@
   .w-2\/3 {
     width: calc(2/3 * 100%);
   }
+  .w-10\/12 {
+    width: calc(10/12 * 100%);
+  }
   .w-11\/12 {
     width: calc(11/12 * 100%);
+  }
+  .w-full {
+    width: 100%;
   }
   .cursor-pointer {
     cursor: pointer;
@@ -612,9 +627,6 @@
   }
   .flex-col-reverse {
     flex-direction: column-reverse;
-  }
-  .place-content-baseline {
-    place-content: baseline;
   }
   .items-center {
     align-items: center;
@@ -631,26 +643,17 @@
   .justify-center {
     justify-content: center;
   }
-  .gap-10 {
-    gap: calc(var(--spacing) * 10);
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
   }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
   }
-  .place-self-end {
-    place-self: end;
-  }
-  .self-baseline {
-    align-self: baseline;
-  }
   .self-center {
     align-self: center;
   }
-  .self-end {
-    align-self: flex-end;
-  }
-  .rounded {
-    border-radius: 0.25rem;
+  .overflow-x-auto {
+    overflow-x: auto;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -667,10 +670,6 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
-  }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
   }
   .border-t-0 {
     border-top-style: var(--tw-border-style);
@@ -695,17 +694,11 @@
   .border-slate-200 {
     border-color: var(--color-slate-200);
   }
-  .border-slate-300 {
-    border-color: var(--color-slate-300);
-  }
-  .border-slate-400 {
-    border-color: var(--color-slate-400);
-  }
   .border-zinc-400 {
     border-color: var(--color-zinc-400);
   }
-  .bg-avocado-500 {
-    background-color: var(--color-avocado-500);
+  .border-b-slate-200 {
+    border-bottom-color: var(--color-slate-200);
   }
   .bg-slate-50 {
     background-color: var(--color-slate-50);
@@ -719,9 +712,6 @@
   .p-1 {
     padding: calc(var(--spacing) * 1);
   }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
-  }
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
@@ -730,6 +720,12 @@
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
+  .py-6 {
+    padding-block: calc(var(--spacing) * 6);
   }
   .font-poppins {
     font-family: var(--font-poppins);
@@ -742,9 +738,17 @@
     font-size: var(--text-9xl);
     line-height: var(--tw-leading, var(--text-9xl--line-height));
   }
+  .text-lg {
+    font-size: var(--text-lg);
+    line-height: var(--tw-leading, var(--text-lg--line-height));
+  }
   .font-extralight {
     --tw-font-weight: var(--font-weight-extralight);
     font-weight: var(--font-weight-extralight);
+  }
+  .font-semibold {
+    --tw-font-weight: var(--font-weight-semibold);
+    font-weight: var(--font-weight-semibold);
   }
   .text-yellow-950 {
     color: var(--color-yellow-950);
@@ -752,29 +756,16 @@
   .uppercase {
     text-transform: uppercase;
   }
+  .italic {
+    font-style: italic;
+  }
   .shadow-2xl {
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .hover\:scale-50 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 50%;
-        --tw-scale-y: 50%;
-        --tw-scale-z: 50%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
-  .hover\:scale-105 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 105%;
-        --tw-scale-y: 105%;
-        --tw-scale-z: 105%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .hover\:underline {
     &:hover {
@@ -783,9 +774,34 @@
       }
     }
   }
-  .md\:grid-cols-4 {
+  .md\:h-\[200px\] {
     @media (width >= 48rem) {
-      grid-template-columns: repeat(4, minmax(0, 1fr));
+      height: 200px;
+    }
+  }
+  .md\:w-\[200\%\] {
+    @media (width >= 48rem) {
+      width: 200%;
+    }
+  }
+  .md\:w-auto {
+    @media (width >= 48rem) {
+      width: auto;
+    }
+  }
+  .md\:grid-cols-\[repeat\(10\,minmax\(250px\,1fr\)\)\] {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(10,minmax(250px,1fr));
+    }
+  }
+  .md\:grid-cols-\[repeat\(auto\,minmax\(250px\,1fr\)\)\] {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(auto,minmax(250px,1fr));
+    }
+  }
+  .md\:grid-rows-\[300px_300px\] {
+    @media (width >= 48rem) {
+      grid-template-rows: 300px 300px;
     }
   }
   .md\:flex-row {
@@ -793,10 +809,29 @@
       flex-direction: row;
     }
   }
-  .lg\:grid-cols-4 {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(4, minmax(0, 1fr));
+  .md\:justify-between {
+    @media (width >= 48rem) {
+      justify-content: space-between;
     }
+  }
+  .md\:overflow-x-scroll {
+    @media (width >= 48rem) {
+      overflow-x: scroll;
+    }
+  }
+  .md\:overflow-y-hidden {
+    @media (width >= 48rem) {
+      overflow-y: hidden;
+    }
+  }
+}
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 }
 @keyframes spin {
@@ -888,19 +923,4 @@
   syntax: "*";
   inherits: false;
   initial-value: 0 0 #0000;
-}
-@property --tw-scale-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
 }
