--- a/input.css
+++ b/input.css
@@ -2,14 +2,7 @@
 
 @theme {
     --font-poppins: Poppins, sans-serif;
-    --color-avocado-500: rgb(50, 168, 82);
 }
-
-/* @layer components {
-    img {
-        border: 5px solid red;
-    } 
-} */
 
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
@@ -20,5 +13,8 @@
     .no-scrollbar {
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
+  }
+  .max-height {
+    @apply h-[310px] object-contain
   }
 }
