--- a/output.css
+++ b/output.css
@@ -860,6 +860,10 @@
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
+  .font-semibold {
+    --tw-font-weight: var(--font-weight-semibold);
+    font-weight: var(--font-weight-semibold);
+  }
   .font-thin {
     --tw-font-weight: var(--font-weight-thin);
     font-weight: var(--font-weight-thin);
@@ -1134,6 +1138,11 @@
   .md\:pr-96 {
     @media (width >= 48rem) {
       padding-right: calc(var(--spacing) * 96);
+    }
+  }
+  .md\:pr-\[1px\] {
+    @media (width >= 48rem) {
+      padding-right: 1px;
     }
   }
   .md\:pb-10 {
